# hostlens

./: .env.example  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MIGRATION.md  OPERABILITY.md  agent-cache-strategy.md
docs/integrations/: mcp-tools.md
docs/operations/: demo-cassette-recording.md  inspector-authoring-contract.md  inspector-authoring.md  inspectors.md  notify.md  targets.md
examples/: README.md
examples/m1-inspectors/: README.md  bad-injection.yaml  demo-output.md  dispatch.py
examples/m1-targets/: README.md
openspec/: config.yaml
schedules/: daily-health-fleet.yaml.example
scripts/: cassette_lint.py
tests/: conftest.py  test_cassette_lint.py
tests/agent/: _helpers.py  _scenario.py  test_cache_strategy.py  test_create_backend.py  test_diagnostician_result.py  test_is_daemon_mode.py  test_llm_cassette_fixture.py  test_loop.py  test_planner.py  test_planner_roundtrip.py  test_tools_adapter_policy.py
tests/cli/: test_doctor.py  test_doctor_backend.py  test_doctor_config_boundary.py  test_doctor_permissions.py  test_doctor_schema_snapshot.py  test_dotenv_bootstrap.py  test_inspect.py  test_inspect_demo_path_4_cases.py  test_inspect_intent.py  test_inspect_intent_diagnostician.py  test_inspect_intent_persist.py  test_inspect_intent_report.py  test_inspect_runner_invocation.py  test_inspect_snapshot.py  test_inspect_streams.py  test_inspectors.py  test_notify_cli.py  test_reports_cli.py  test_run_diagnosis_pipeline.py  test_schedule.py  test_target.py  test_target_docker.py  test_target_import_ssh_integration.py
tests/core/: test_config.py  test_config_backend.py  test_exceptions.py  test_redact.py  test_settings_no_builtin_inspectors_path.py  test_timefmt.py
tests/demo/: test_demo_cli.py  test_demo_e2e_all_scenarios.py  test_demo_persist.py  test_demo_replay.py
tests/incidents/: README.md  _generate.py  _harness.py  _scenarios.py  test_cassette_record_path.py  test_cpu_saturation.py  test_dependency_unreachable.py  test_diff_replay.py  test_disk_inode.py  test_drift.py  test_error_burst.py  test_fd_exhaustion.py  test_memory_oom.py  test_systemd_failed.py  test_tls_expiry.py
tests/inspectors/: _compose_record.py  _record_k8s.py  _record_mysql_deadlocks.py  _record_mysql_replication_lag.py  _record_mysql_slow_queries.py  _record_nginx_error_rate.py  _record_nginx_upstream.py  _record_os_compute_memory.py  _record_os_disk_fs.py  _record_os_kernel_log.py  _record_os_net.py  _record_os_process.py  _record_os_systemd_cron.py  _record_postgres_bloat.py  _record_postgres_long_queries.py  _record_postgres_replication_lag.py  _record_redis_replication_lag.py  _record_redis_slowlog.py  _record_security_pkg.py  _shim_exec.py  test_builtin_capability_gate.py  test_builtin_inspectors.py  test_coerce_and_validate_parameters.py  test_docker_networks.py  (+50 more)
(+649 files in other folders)
