[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "hostlens"
version = "0.1.0"
description = "LLM-driven server inspection agent (CLI + MCP server)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Herbert Gao", email = "heapcn@gmail.com" },
]
keywords = ["llm", "agent", "inspection", "ops", "anthropic", "mcp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "typer>=0.12,<0.26",
    "click>=8.1,<9",
    "rich>=13.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "asyncssh>=2.18,<3",
    "aiofiles>=23.0",
    "pyyaml>=6.0,<7",
    "simpleeval>=1.0,<2",
    "jinja2>=3.1,<4",
    "jsonschema>=4.20,<5",
    "anthropic>=0.45,<2",
    "APScheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest-docker>=3.1,<4",
    "pytest-rerunfailures>=14.0,<17",
    "psutil>=5.9",
    "syrupy>=4.6,<6",
    "types-PyYAML",
    "pip-audit>=2.7",
]
mcp = []
docs = []

[project.scripts]
hostlens = "hostlens.cli:main"

[project.urls]
Homepage = "https://github.com/HerbertGao/hostlens"
Repository = "https://github.com/HerbertGao/hostlens"
Issues = "https://github.com/HerbertGao/hostlens/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hostlens"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/cassettes"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
extend-ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "E501",
    "COM812",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]
exclude = ['tests/']

[[tool.mypy.overrides]]
module = ["simpleeval", "jsonschema", "apscheduler.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config -m 'not live'"
markers = [
    "slow: long-running tests",
    "live: tests that hit real Anthropic API (opt-in via -m live)",
]
